--- a/mainapp/templates/mainapp/about_us.html
+++ b/mainapp/templates/mainapp/about_us.html
@@ -10,7 +10,7 @@
             <div class="bloc">
                 <img
                         class="atmosphere-img bloc1"
-                        src="../../../static/img/atmosphere1.jpg"
+                        src="{% static 'img/atmosphere1.jpg' %}"
                         alt="Салон BEAUTY"
                 />
             </div>
@@ -29,14 +29,14 @@
             <div class="bloc">
                 <img
                         class="atmosphere-img bloc2"
-                        src="../../../static/img/atmosphere2.jpg"
+                        src="{% static 'img/atmosphere2.jpg' %}"
                         alt="Салон BEAUTY"
                 />
             </div>
             <div class="bloc">
                 <img
                         class="atmosphere-img bloc3"
-                        src="../../../static/img/atmosphere3.jpg"
+                        src="{% static 'img/atmosphere3.jpg' %}"
                         alt="Салон BEAUTY"
                 />
             </div>
@@ -51,7 +51,7 @@
         <div class="flex mobile-atmosphere hide-on-tablet desctop-hide">
             <img
                     class="atmosphere-img"
-                    src="../../../static/img/atmosphere1.jpg"
+                    src="{% static 'img/atmosphere1.jpg' %}"
                     alt="Салон BEAUTY"
             />
             <p class="atmosphere-description">
@@ -62,7 +62,7 @@
             </p>
             <img
                     class="atmosphere-img"
-                    src="../../../static/img/atmosphere2.jpg"
+                    src="{% static 'img/atmosphere2.jpg' %}"
                     alt="Салон BEAUTY"
             />
             <p class="atmosphere-description">
@@ -73,7 +73,7 @@
             </p>
             <img
                     class="atmosphere-img"
-                    src="../../../static/img/atmosphere3.jpg"
+                    src="{% static 'img/atmosphere3.jpg' %}"
                     alt="Салон BEAUTY"
             />
             <p class="atmosphere-description">
@@ -89,7 +89,7 @@
         <div class="container grid grid--3-cols profi hide-mobil hide-important desctop-show">
             <div class="services-block">
                 <img
-                        src="../../../static/img/natalja.jpg"
+                        src="{% static 'img/natalja.jpg' %}"
                         class="services-block-img"
                         alt="Мастер салона BEAUTY"
                 />
@@ -97,7 +97,7 @@
             </div>
             <div class="services-block">
                 <img
-                        src="../../../static/img/anastasia.jpg"
+                        src="{% static 'img/anastasia.jpg' %}"
                         class="services-block-img"
                         alt="Мастер салона BEAUTY"
                 />
@@ -105,7 +105,7 @@
             </div>
             <div class="services-block">
                 <img
-                        src="../../../static/img/polina.jpg"
+                        src="{% static 'img/polina.jpg' %}"
                         class="services-block-img"
                         alt="Мастер салона BEAUTY"
                 />
@@ -132,7 +132,7 @@
                     <div class="swiper-slide swiper-slide-profi">
                         <div class="services-block services-block-profi">
                             <img
-                                    src="../../../static/img/natalja.jpg"
+                                    src="{% static 'img/natalja.jpg' %}"
                                     class="services-block-img"
                                     alt="Мастер салона BEAUTY"
                             />
@@ -146,7 +146,7 @@
                     <div class="swiper-slide swiper-slide-profi">
                         <div class="services-block services-block-profi">
                             <img
-                                    src="../../../static/img/anastasia.jpg"
+                                    src="{% static 'img/anastasia.jpg' %}"
                                     class="services-block-img"
                                     alt="Мастер салона BEAUTY"
                             />
@@ -160,7 +160,7 @@
                     <div class="swiper-slide swiper-slide-profi">
                         <div class="services-block services-block-profi">
                             <img
-                                    src="../../../static/img/polina.jpg"
+                                    src="{% static 'img/polina.jpg' %}"
                                     class="services-block-img"
                                     alt="Мастер салона BEAUTY"
                             />
@@ -177,94 +177,4 @@
             </div>
         </div>
     </section>
-    <section class="flex form-section container">
-        <h2 class="h2 red-text">Записаться на услугу</h2>
-        <p class="nails-recomm-h ta-center">
-            Заполните форму ниже и мы свяжемся с вами для уточнения <br/>информации
-            и консультации по наличию свободного времени
-        </p>
-
-        <form action="#" class="flex form">
-            <input
-                    type="text"
-                    name="name"
-                    id="name"
-                    placeholder="Имя"
-                    class="input-form"
-            />
-
-            <input
-                    type="tel"
-                    name="phone"
-                    id="phone"
-                    placeholder="Телефон"
-                    class="input-form"
-            />
-            <input
-                    type="text"
-                    name="messenger"
-                    id="messenger"
-                    placeholder="Мессенджер"
-                    class="input-form"
-            />
-            <input
-                    type="text"
-                    name="service"
-                    id="service"
-                    placeholder="Желаемая услуга"
-                    class="input-form"
-            />
-            <input
-                    type="text"
-                    name="datetime"
-                    id="datetime"
-                    placeholder="Дата и время"
-                    class="input-form"
-            />
-
-            <input
-                    type="text"
-                    name="connection_type"
-                    id="connection_type"
-                    placeholder="Предпочтительный вид связи"
-                    class="input-form"
-            />
-
-            <label for="policy" class="label-form">
-                <input type="checkbox" name="policy" id="policy" required/>
-                <span
-                >Я подтверждаю согласие на обработку персональных данных в
-            соответствии с условиями
-            <span class="policy-span">Политики конфиденциальности</span></span
-                >
-            </label>
-
-            <button type="submit" class="button-form">Отправить</button>
-        </form>
-    </section>
-    <footer class="container">
-        <div class="section-footer flex">
-            <div class="flex footer-container">
-                <a href="index.html">
-                    <p class="logo-font logo-menu">BEAUTY</p>
-                    <p class="logo-menu-p">САЛОН КРАСОТЫ</p>
-                </a>
-                <a href="#" class="footer-policy">Политика конфиденциальности</a>
-
-                <div class="flex menu-icons">
-                    <a href="#"
-                    ><img
-                            src="../../../static/img/telegram.svg"
-                            class="social-media-img"
-                            alt="telegram"
-                    /></a>
-                    <a href="#"
-                    ><img src="../../../static/img/vk.svg" class="social-media-img" alt="vkontakte"
-                    /></a>
-                </div>
-            </div>
-            <a href="#" class="mobile-footer-policy desctop-hide">Политика конфиденциальности</a>
-        </div>
-    </footer>
-
 {% endblock %}
