--- a/mainapp/templates/mainapp/contacts.html
+++ b/mainapp/templates/mainapp/contacts.html
@@ -6,116 +6,24 @@
 
 
     <main class="adress-section flex">
-        <img class="hero-img hide-mobil show-on-tablet" src="../../../static/img/location.jpg" alt="Салон BEAUTY">
+        <img class="hero-img hide-mobil show-on-tablet" src="{% static 'img/location.jpg' %}" alt="Салон BEAUTY">
         <div class="contacts-img-main hide-on-tablet"></div>
         <h2 class="h2 red-text">Контакты</h2>
         <p class="flex adress-text hide-mobil show-on-tablet"><img class="contacts-img"
-                                                                   src="../../../static/img/place.svg" alt="place icon">
+                                                                   src="{% static 'img/place.svg' %}" alt="place icon">
             г. Город, ул. Пушкина, д. 56</p>
         <div class="flex adress-mobile hide-on-tablet desctop-hide">
-            <img class="contacts-img" src="../../../static/img/place.svg" alt="place icon">
+            <img class="contacts-img" src="{% static 'img/place.svg' %}" alt="place icon">
             <p class="adress-text-mobile"> г. Город, <br>ул. Пушкина, д. 56
             </p>
         </div>
         <div class="flex adress-div">
-            <p class="flex adress-text"><img class="contacts-img" src="../../../static/img/call.svg" alt="call icon">+7(0000)00
+            <p class="flex adress-text"><img class="contacts-img" src="{% static 'img/call.svg' %}" alt="call icon">+7(000) 000
                 00 00</p>
-            <p class="flex adress-text"><img class="contacts-img" src="../../../static/img/date_range.svg"
+            <p class="flex adress-text"><img class="contacts-img" src="{% static 'img/date_range.svg' %}"
                                              alt="date icon">Пн-Вс: 9.00-21.00</p>
         </div>
-        <img class="hero-imgs hide-mobil show-on-tablet" src="../../../static/img/map.jpg" alt="">
+        <img class="hero-imgs hide-mobil show-on-tablet" src="{% static 'img/map.jpg' %}" alt="">
         <div class="contacts-img-map hide-on-tablet"></div>
     </main>
-    <section class="flex form-section container">
-        <h2 class="h2 red-text">Записаться на услугу</h2>
-        <p class="nails-recomm-h ta-center">
-            Заполните форму ниже и мы свяжемся с вами для уточнения <br/>информации
-            и консультации по наличию свободного времени
-        </p>
-
-        <form action="#" class="flex form">
-            <input
-                    type="text"
-                    name="name"
-                    id="name"
-                    placeholder="Имя"
-                    class="input-form"
-            />
-
-            <input
-                    type="tel"
-                    name="phone"
-                    id="phone"
-                    placeholder="Телефон"
-                    class="input-form"
-            />
-            <input
-                    type="text"
-                    name="messenger"
-                    id="messenger"
-                    placeholder="Мессенджер"
-                    class="input-form"
-            />
-            <input
-                    type="text"
-                    name="service"
-                    id="service"
-                    placeholder="Желаемая услуга"
-                    class="input-form"
-            />
-            <input
-                    type="text"
-                    name="datetime"
-                    id="datetime"
-                    placeholder="Дата и время"
-                    class="input-form"
-            />
-
-            <input
-                    type="text"
-                    name="connection_type"
-                    id="connection_type"
-                    placeholder="Предпочтительный вид связи"
-                    class="input-form"
-            />
-
-            <label for="policy" class="label-form">
-                <input type="checkbox" name="policy" id="policy" required/>
-                <span
-                >Я подтверждаю согласие на обработку персональных данных в
-            соответствии с условиями
-            <span class="policy-span">Политики конфиденциальности</span></span
-                >
-            </label>
-
-            <button type="submit" class="button-form">Отправить</button>
-        </form>
-
-
-    </section>
-    <footer class="container">
-        <div class="section-footer flex">
-            <div class="flex footer-container">
-                <a href="index.html">
-                    <p class="logo-font logo-menu">BEAUTY</p>
-                    <p class="logo-menu-p">САЛОН КРАСОТЫ</p>
-                </a>
-                <a href="#" class="footer-policy">Политика конфиденциальности</a>
-
-                <div class="flex menu-icons">
-                    <a href="#"
-                    ><img
-                            src="../../../static/img/telegram.svg"
-                            class="social-media-img"
-                            alt="telegram"
-                    /></a>
-                    <a href="#"
-                    ><img src="../../../static/img/vk.svg" class="social-media-img" alt="vkontakte"
-                    /></a>
-                </div>
-            </div>
-            <a href="#" class="mobile-footer-policy desctop-hide">Политика конфиденциальности</a>
-        </div>
-    </footer>
-
 {% endblock %}
