--- a/mainapp/templates/mainapp/gallery.html
+++ b/mainapp/templates/mainapp/gallery.html
@@ -9,7 +9,7 @@
             <a href="#" class="flex gallery-name">
                 Работы мастера<br/>
                 Натальи
-                <img src="../../../static/img/Arrow-left.svg" alt="arrow"/>
+                <img src="{% static 'img/Arrow-left.svg' %}" alt="arrow"/>
             </a>
             <div class="flex gallery-name active">
                 Работы мастера<br/>
@@ -18,7 +18,7 @@
             <a href="#" class="flex gallery-name">
                 Работы мастера<br/>
                 Полины
-                <img src="../../../static/img/Arrow-right.svg" alt="arrow"/>
+                <img src="{% static 'img/Arrow-right.svg' %}" alt="arrow"/>
             </a>
         </div>
         <!-- <div class="container"> -->
@@ -29,7 +29,7 @@
                 <!-- Slides -->
                 <div class="swiper-slide swiper-slide-gallery">
                     <img
-                            src="../../../static/img/work_a1.jpg"
+                            src="{% static 'img/work_a1.jpg' %}"
                             class="gallery-img"
                             alt="Салон BEAUTY"
                     />
@@ -37,7 +37,7 @@
                 </div>
                 <div class="swiper-slide swiper-slide-gallery">
                     <img
-                            src="../../../static/img/work_a2.jpg"
+                            src="{% static 'img/work_a2.jpg' %}"
                             class="gallery-img"
                             alt="Салон BEAUTY"
                     />
@@ -45,7 +45,7 @@
                 </div>
                 <div class="swiper-slide swiper-slide-gallery">
                     <img
-                            src="../../../static/img/work_a3.jpg"
+                            src="{% static 'img/work_a3.jpg' %}"
                             class="gallery-img"
                             alt="Салон BEAUTY"
                     />
@@ -53,7 +53,7 @@
                 </div>
                 <div class="swiper-slide swiper-slide-gallery">
                     <img
-                            src="../../../static/img/work_a4.jpg"
+                            src="{% static 'img/work_a4.jpg' %}"
                             class="gallery-img"
                             alt="Салон BEAUTY"
                     />
@@ -61,7 +61,7 @@
                 </div>
                 <div class="swiper-slide swiper-slide-gallery">
                     <img
-                            src="../../../static/img/work_a5.jpg"
+                            src="{% static 'img/work_a5.jpg' %}"
                             class="gallery-img"
                             alt="Салон BEAUTY"
                     />
@@ -73,94 +73,5 @@
         </div>
         <!-- </div> -->
     </main>
-    <section class="flex form-section container">
-        <h2 class="h2 red-text">Записаться на услугу</h2>
-        <p class="nails-recomm-h ta-center">
-            Заполните форму ниже и мы свяжемся с вами для уточнения <br/>информации
-            и консультации по наличию свободного времени
-        </p>
-
-        <form action="#" class="flex form">
-            <input
-                    type="text"
-                    name="name"
-                    id="name"
-                    placeholder="Имя"
-                    class="input-form"
-            />
-
-            <input
-                    type="tel"
-                    name="phone"
-                    id="phone"
-                    placeholder="Телефон"
-                    class="input-form"
-            />
-            <input
-                    type="text"
-                    name="messenger"
-                    id="messenger"
-                    placeholder="Мессенджер"
-                    class="input-form"
-            />
-            <input
-                    type="text"
-                    name="service"
-                    id="service"
-                    placeholder="Желаемая услуга"
-                    class="input-form"
-            />
-            <input
-                    type="text"
-                    name="datetime"
-                    id="datetime"
-                    placeholder="Дата и время"
-                    class="input-form"
-            />
-
-            <input
-                    type="text"
-                    name="connection_type"
-                    id="connection_type"
-                    placeholder="Предпочтительный вид связи"
-                    class="input-form"
-            />
-
-            <label for="policy" class="label-form">
-                <input type="checkbox" name="policy" id="policy" required/>
-                <span
-                >Я подтверждаю согласие на обработку персональных данных в
-            соответствии с условиями
-            <span class="policy-span">Политики конфиденциальности</span></span
-                >
-            </label>
-
-            <button type="submit" class="button-form">Отправить</button>
-        </form>
-    </section>
-    <footer class="container">
-        <div class="section-footer flex">
-            <div class="flex footer-container">
-                <a href="index.html">
-                    <p class="logo-font logo-menu">BEAUTY</p>
-                    <p class="logo-menu-p">САЛОН КРАСОТЫ</p>
-                </a>
-                <a href="#" class="footer-policy">Политика конфиденциальности</a>
-
-                <div class="flex menu-icons">
-                    <a href="#"
-                    ><img
-                            src="../../../static/img/telegram.svg"
-                            class="social-media-img"
-                            alt="telegram"
-                    /></a>
-                    <a href="#"
-                    ><img src="../../../static/img/vk.svg" class="social-media-img" alt="vkontakte"
-                    /></a>
-                </div>
-            </div>
-            <a href="#" class="mobile-footer-policy desctop-hide">Политика конфиденциальности</a>
-        </div>
-    </footer>
 
 {% endblock %}
