--- a/mainapp/templates/mainapp/index.html
+++ b/mainapp/templates/mainapp/index.html
@@ -28,7 +28,7 @@
         </div>
         <div class="container flex hero-content">
             <h1 class="logo-font hero-logo gsap-hero">BEAUTY</h1>
-            <p class="hero-content-p gsap-hero">+7(0000)00
+            <p class="hero-content-p gsap-hero">+7(000)000
                 00 00</p>
             <a href="#" class="appointment-link gsap-hero">Записаться сейчас</a>
         </div>
@@ -38,7 +38,7 @@
         <div class="grid grid--3-cols">
             <div class="services-block">
                 <img
-                        src="../../../static/img/service1-haircut.jpg"
+                        src="{% static 'img/service1-haircut.jpg' %}"
                         class="services-block-img"
                         alt="Стрижки"
                 />
@@ -46,7 +46,7 @@
             </div>
             <div class="services-block">
                 <img
-                        src="../../../static/img/service2-haircolor.jpg"
+                        src="{% static 'img/service2-haircolor.jpg' %}"
                         class="services-block-img"
                         alt="Окрашивание"
                 />
@@ -54,7 +54,7 @@
             </div>
             <div class="services-block">
                 <img
-                        src="../../../static/img/service3.jpg"
+                        src="{% static 'img/service3.jpg' %}"
                         class="services-block-img"
                         alt="Прически"
                 />
@@ -62,7 +62,7 @@
             </div>
             <div class="services-block">
                 <img
-                        src="../../../static/img/service4-haircare.jpg"
+                        src="{% static 'img/service4-haircare.jpg' %}"
                         class="services-block-img"
                         alt="Уход за волосами"
                 />
@@ -70,7 +70,7 @@
             </div>
             <div class="services-block">
                 <img
-                        src="../../../static/img/service5-nails.jpg"
+                        src="{% static 'img/service5-nails.jpg' %}"
                         class="services-block-img"
                         alt="Маникюр"
                 />
@@ -78,7 +78,7 @@
             </div>
             <div class="services-block">
                 <img
-                        src="../../../static/img/service6-foots.jpg"
+                        src="{% static 'img/service6-foots.jpg' %}"
                         class="services-block-img"
                         alt="Педикюр"
                 />
@@ -94,7 +94,7 @@
         </div>
         <div class="flex dropdown desctop-hide">
             <div class="dropbtn">Парикмахерский зал</div>
-            <img id="moreImg" src="../../../static/img/more.svg" alt="more"/>
+            <img id="moreImg" src="{% static 'img/more.svg' %}" alt="more"/>
             <div class="flex dropdown-content">
                 <a id="mobileHair" href="#table1">Парикмахерский зал</a>
                 <a id="mobileNails" href="#table2">Ногтевой сервис</a>
@@ -286,100 +286,6 @@
             <h3 class="red-text h3">Красоты и здоровья вашим ноготочкам!</h3>
         </div>
     </section>
-    <section class="flex form-section container">
-        <h2 class="h2 red-text">Записаться на услугу</h2>
-        <p class="nails-recomm-h ta-center">
-            Заполните форму ниже и мы свяжемся с вами для уточнения <br/>информации
-            и консультации по наличию свободного времени
-        </p>
 
-        <form action="#" class="flex form" id="formsend">
-            <input
-                    type="text"
-                    name="name"
-                    id="name"
-                    placeholder="Имя"
-                    class="input-form"
-            />
-
-            <input
-                    type="tel"
-                    name="phone"
-                    id="phone"
-                    placeholder="Телефон"
-                    class="input-form"
-            />
-            <input
-                    type="text"
-                    name="messenger"
-                    id="messenger"
-                    placeholder="Мессенджер"
-                    class="input-form"
-            />
-            <input
-                    type="text"
-                    name="service"
-                    id="service"
-                    placeholder="Желаемая услуга"
-                    class="input-form"
-            />
-            <input
-                    type="text"
-                    name="datetime"
-                    id="datetime"
-                    placeholder="Дата и время"
-                    class="input-form"
-            />
-
-            <input
-                    type="text"
-                    name="connection_type"
-                    id="connection_type"
-                    placeholder="Предпочтительный вид связи"
-                    class="input-form"
-            />
-
-            <label for="policy" class="label-form">
-                <input type="checkbox" name="policy" id="policy" required/>
-                <span
-                >Я подтверждаю согласие на обработку персональных данных в
-            соответствии с условиями
-            <span class="policy-span">Политики конфиденциальности</span></span
-                >
-            </label>
-
-            <button type="submit" class="button-form">Отправить</button>
-        </form>
-        <div id="thanks" class="flex thanks">
-            <img src="../../../static/img/close.svg" alt="close" class="close-btn"/>
-            <p>Спасибо!</p>
-            <p>Мы свяжемся с вами в ближайшее время, чтобы подтвердить запись</p>
-            <p class="logo-font logo-thanks">BEAUTY</p>
-        </div>
-    </section>
-    <footer class="container">
-        <div class="section-footer flex">
-            <div class="flex footer-container">
-                <a href="index.html">
-                    <p class="logo-font logo-menu">BEAUTY</p>
-                    <p class="logo-menu-p">САЛОН КРАСОТЫ</p>
-                </a>
-                <a href="#" class="footer-policy">Политика конфиденциальности</a>
-
-                <div class="flex menu-icons">
-                    <a href="#"
-                    ><img
-                            src="../../../static/img/telegram.svg"
-                            class="social-media-img"
-                            alt="telegram"
-                    /></a>
-                    <a href="#"
-                    ><img src="../../../static/img/vk.svg" class="social-media-img" alt="vkontakte"
-                    /></a>
-                </div>
-            </div>
-            <a href="#" class="mobile-footer-policy desctop-hide">Политика конфиденциальности</a>
-        </div>
-    </footer>
 
 {% endblock %}
